Ajout stock internes APPLE
Former-commit-id: 5cc027ab4200294fb7c2bd23fab39aaa92c76736

--- a/htdocs/bimpapple/objects/ConsignedStockShipment.yml
+++ b/htdocs/bimpapple/objects/ConsignedStockShipment.yml
@@ -8,7 +8,7 @@ list_page_url:
     module: bimpsupport
     controller: index
     url_params: 
-        tab: consigned_stocks
+        tab: part_stocks
         navtab-maintabs: cs_shipments
         
 header_list_name: default
