Maj Stock apple interne
Former-commit-id: 54748bdae155058003e7883fa3a946e50fb3fa67

--- a/htdocs/bimpapple/objects/InternalStock.yml
+++ b/htdocs/bimpapple/objects/InternalStock.yml
@@ -18,6 +18,15 @@ labels:
     name: stock interne
     name_plur: stocks internes
     
+fields: 
+    last_pa: 
+        label: Dernier Prix d'achat
+        type: money
+        default_value: 0
+        
 lists: 
     default: 
         title: Stocks internes
+        cols: 
+            last_pa: 
+                edit: 1
