Maj user modif auto
Former-commit-id: 496d1790297449c9c3f03a5ca2ec27d7565adc2f

--- a/htdocs/bimpcore/objects/Bimp_Product.yml
+++ b/htdocs/bimpcore/objects/Bimp_Product.yml
@@ -535,12 +535,12 @@ fields:
         default_value: 0
                     
     fk_user_modif:
-        label: Utilisateur modification
+        label: Modifié par
         type: id_object
         object: user
         
     fk_user_author:
-        label: Créateur
+        label: Créé par
         type: id_object
         object: user
         
