Ajout duplication lignes BimpComm
Former-commit-id: 5e0165b7fa1207aab83ca1cb882930752a53fb88

--- a/htdocs/bimpcommercial/objects/ObjectLine.yml
+++ b/htdocs/bimpcommercial/objects/ObjectLine.yml
@@ -807,6 +807,9 @@ lists:
             - label: supprimer les lignes sélectionnées
               icon: fas_trash-alt
               onclick: deleteSelectedObjects('list_id', $(this))
+            - label: Dupliquer les lignes sélectionnées
+              icon: fas_copy
+              onclick: setSelectedObjectsAction($(this), 'list_id', 'duplicateLines', {}, null, 'Veuillez confirmer', true)
         sort_field: position
         sort_way: asc
         n: 0
