--- a/htdocs/bimptask/objects/BIMP_Task.yml
+++ b/htdocs/bimptask/objects/BIMP_Task.yml
@@ -140,7 +140,24 @@ fields:
                 label: Avec lien
                 type: callback
                 method: displayPageLink
-                    
+                
+    users_follow: 
+        label: Suivie par
+        type: items_list
+        items_data_type: id_object
+        items_braces: 1
+        object: user
+        input: 
+            type: search_user
+            
+    users_no_follow: 
+        label: Suivi refusé par
+        type: items_list
+        items_data_type: id_object
+        items_braces: 1
+        object: user
+        input: 
+            type: search_user
  
 fields_tables:
     default: 
@@ -166,8 +183,8 @@ fields_tables:
             - field: id_user_owner
               edit: 1
             - label: Notifier
-              value:
-                callback: displayUserNotif
+              value: 
+                  callback: displayUserNotif
             - label: Images liées
               value: 
                   callback: renderImages
@@ -188,6 +205,7 @@ forms:
             - field: txt
             - field: comment
             - field: id_user_owner
+            - field: users_follow
             - field: url
             
     add:
@@ -316,6 +334,16 @@ forms:
                   rows: 3
                   auto_expand: 1
               hashtags: 1
+              
+    add_user_follow: 
+        rows: 
+            - custom: 1
+              label: Utilisateur à notifier
+              input_name: id_user
+              data_type: id
+              input: 
+                  type: search_user
+                  active_only: 1
            
 lists_cols: 
     typeTache:
@@ -376,8 +404,6 @@ lists:
                 
     sousTache:
         extends: main
-#        cols: 
-#            nb_sous_taches: unset
 
 views:
     full: 
