--- a/htdocs/bimpsupport/bimpsupport.yml
+++ b/htdocs/bimpsupport/bimpsupport.yml
@@ -26,3 +26,9 @@ params:
         label: Utiliser version 2 pour les PDF des bons de prêts
         type: bool
         def: 0
+        
+    delay_alertes_clients_unrestitute_sav: 
+        label: Délai (en jours) avant envoi de l'alerte au client pour les SAV non restitués
+        info: Laisser 0 pour désactiver l'envoi des alertes
+        type: int
+        def: 0
