--- a/htdocs/bimpcommercial/bimpcommercial.yml
+++ b/htdocs/bimpcommercial/bimpcommercial.yml
@@ -289,6 +289,13 @@ params:
         info: Laisser vide pour désactiver l\'envoi des rappels
         def: ''
         
+    rappels_factures_financement_impayees_delay: 
+        label: Délai pour l\'envoi des rappels pour les factures en financement impayées
+        type: int
+        cat: rappels
+        info: Laisser 0 pour désactiver l\'envoi des rappels
+        def: 0
+        
     rappels_factures_financement_impayees_emails:
         label: Adresse(s) e-mail pour l\'envoi des rappels pour les factures en financement impayées
         cat: rappels
